--- a/src/AddTodoForm.module.css
+++ b/src/AddTodoForm.module.css
@@ -76,3 +76,14 @@
     font-size: 1.25rem;
   }
 }
+@media only screen and (min-width: 500px) {
+  .todoInput {
+    font-size: .875rem;
+  }
+  .addBtn {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: .75rem;
+  }
+}
