--- a/src/AddTodoForm.module.css
+++ b/src/AddTodoForm.module.css
@@ -76,8 +76,9 @@
     font-size: 1.25rem;
   }
 }
-@media only screen and (min-width: 500px) {
-  .todoInput {
-    font-size: .875rem;
+@media only screen and (max-width: 500px) {
+  svg {
+    height: 20px;
+    width: 20px;
   }
 }
