--- a/src/App.module.css
+++ b/src/App.module.css
@@ -99,9 +99,11 @@ p {
     width: auto;
   }
   p {
+    padding: 5px;
     font-size: 0.9375rem;
   }
   h1,h2 {
     font-size: 1.5rem;
   }
 }
+/* check logo */
