--- a/src/TodoListItem.module.css
+++ b/src/TodoListItem.module.css
@@ -1,3 +1,9 @@
+/* list item button */
+.todoItemBtn {
+  padding: 3px 20px !important;
+  color: #40414a;
+  cursor: pointer;
+}
 /* li element */
 .listItem {
     color: #001233;
@@ -9,10 +15,4 @@
     display: flex;
     justify-content: flex-start;
     align-content: center;
-}
-/* list item button */
-.todoItemBtn {
-  padding: 0px 20px ;
-  color: #40414a;
-  cursor: pointer;
 }
