--- a/src/TodoListItem.module.css
+++ b/src/TodoListItem.module.css
@@ -9,10 +9,13 @@
     color: #001233;
     list-style: none;
     font-size: 1.5rem;
-    padding: 15px 5px 5px 15px;
+    padding: 0px 5px 0px 10px;
     height: 40px;
     width: 95%;
     display: flex;
     justify-content: flex-start;
     align-content: center;
+}
+.listText {
+  overflow: auto;
 }
