--- a/src/TodoListItem.module.css
+++ b/src/TodoListItem.module.css
@@ -27,4 +27,14 @@
   border-radius: 5px;
   margin: 5px 0 20px 10px;
   background-color: #fff;
+  display: inline-block;
+}
+.timeBtn {
+  display: inline-block;
+  padding: 5px;
+  color: #6370ab;
+  background-color: #fff;
+  border: 1px solid #6370ab;
+  border-radius: 5px;
+  margin: 5px 0 20px 10px;
 }
