--- a/src/App.module.css
+++ b/src/App.module.css
@@ -45,6 +45,10 @@ p {
 .appHeader {
   padding: 15px 15px 0px 15px;
 }
+/* app.js checklist logo */
+.check {
+  margin-left: 10px;
+}
 /* media queries for font sizes the rem sizes get larger or smaller depending on viewport */
 @media only screen and (min-width: 1201px) {
   .container {
