--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -15,6 +15,12 @@
   width: 60%;
   margin-bottom: 4px;
 }
+/* span child text */
+span {
+  font-size: 1.25rem;
+  padding: 0px 5px 2px 2px;
+  color:#40414a;
+}
 /* form button */
 .addBtn {
   background: #6370ab;
@@ -29,6 +35,22 @@
   border: 0;
 }
 /* media queries flexbox will change alignment of content at smaller viewports */
+@media screen and (min-width: 1024px) {
+  .addBtn {
+    width: 40%;
+  }
+  .todoInput {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 999px) {
+  .addBtn {
+    width: 20%;
+  }
+  .todoInput {
+    width: 50%;
+  }
+}
 @media screen and (max-width: 998px) {
   .todoFormContainer {
     width: 100%;
@@ -41,7 +63,7 @@
   .addBtn {
     margin: 5px;
     padding: 13px;
-    width: 30%;
+    width: 20%;
     text-align: center;
   }
   .todoInput {
@@ -63,24 +85,7 @@
     text-align: center;
   }
   .todoInput {
-    width: 70%;
-  }
-}
-@media screen and (max-width: 768px) {
-  .todoFormContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 10px 5px 20px 5px;
-  }
-  .addBtn {
-    padding: 13px;
-    width: 20%;
-    text-align: center;
-  }
-  .todoInput {
-    width: 60%;
+    width: 50%;
   }
 }
 /* media queries for font sizing and images such as text input field and svg */
