--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -15,10 +15,11 @@
   width: 60%;
   margin-bottom: 4px;
 }
-/* span child text */
+/* span 'children' text */
 span {
   font-size: 1.25rem;
-  padding: 0px 5px 2px 2px;
+  font-weight: bold;
+  padding: 0px 10px 2px 2px;
   color:#40414a;
 }
 /* form button */
@@ -88,6 +89,14 @@ span {
     width: 50%;
   }
 }
+@media screen and (max-width: 520px){
+  .todoInput {
+    width: 40%;
+  }
+  .addBtn {
+    width: auto;
+  }
+}
 /* media queries for font sizing and images such as text input field and svg */
 @media only screen and (min-width: 1201px) {
   .todoInput {
@@ -103,9 +112,12 @@ span {
     font-size: 1.25rem;
   }
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 500px) {
   svg {
     height: 20px;
     width: 20px;
+  }
+  span {
+    font-size: 1rem;
   }
 }
