--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -15,6 +15,13 @@
   width: 60%;
   margin-bottom: 4px;
 }
+/* span 'children' text */
+span {
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 0px 10px 2px 2px;
+  color:#40414a;
+}
 /* form button */
 .addBtn {
   background: #6370ab;
@@ -29,6 +36,22 @@
   border: 0;
 }
 /* media queries flexbox will change alignment of content at smaller viewports */
+@media screen and (min-width: 1024px) {
+  .addBtn {
+    width: 40%;
+  }
+  .todoInput {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 999px) {
+  .addBtn {
+    width: 20%;
+  }
+  .todoInput {
+    width: 50%;
+  }
+}
 @media screen and (max-width: 998px) {
   .todoFormContainer {
     width: 100%;
@@ -41,7 +64,7 @@
   .addBtn {
     margin: 5px;
     padding: 13px;
-    width: 30%;
+    width: 20%;
     text-align: center;
   }
   .todoInput {
@@ -63,24 +86,15 @@
     text-align: center;
   }
   .todoInput {
-    width: 70%;
+    width: 50%;
   }
 }
-@media screen and (max-width: 768px) {
-  .todoFormContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 10px 5px 20px 5px;
+@media screen and (max-width: 520px){
+  .todoInput {
+    width: 40%;
   }
   .addBtn {
-    padding: 13px;
-    width: 20%;
-    text-align: center;
-  }
-  .todoInput {
-    width: 60%;
+    width: auto;
   }
 }
 /* media queries for font sizing and images such as text input field and svg */
@@ -98,9 +112,12 @@
     font-size: 1.25rem;
   }
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 500px) {
   svg {
     height: 20px;
     width: 20px;
+  }
+  span {
+    font-size: 1rem;
   }
 }
