--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -1,8 +1,24 @@
 /* list item button */
 .todoItemBtn {
-  padding: 3px 20px !important;
+  padding: 5px 15px !important;
   color: #40414a;
   cursor: pointer;
+}
+/* todo edit button */
+.todoEditBtn {
+  margin: 0;
+  padding: 5px 0px 0px 0px;
+  color: #40414a;
+  cursor: pointer;
+}
+/* edit input field */
+.editInputField {
+  padding: 0px 5px 0px 5px;
+  letter-spacing: .01rem;
+  font-size: .95rem;
+  height: 1.75rem;
+  border-radius: 5px;
+  border-color: #fff;
 }
 /* li element */
 .listItem {
