adding checkbox and strikethrough of todo feature

--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -35,3 +35,11 @@
 .listText {
   overflow: auto;
 }
+/* li checkbox */
+.listItemCheckbox {
+  margin-right: 10px;
+}
+.listItemCheckbox:checked {
+  background: #fff;
+  margin-right: 10px;
+}
