--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -18,3 +18,8 @@
     border-radius: 5px;
     margin: 5px 0 20px 10px;
   }
+  /* todo list count */
+  .todoCount {
+    font-size: 1rem;
+    margin: 20px 0 0 10px;
+  }
