--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -18,7 +18,7 @@
     border-radius: 5px;
     margin: 5px 0 20px 10px;
   }
-  /* todo list count */
+  /* todo list counter */
   .todoCount {
     font-size: 1rem;
     margin: 20px 0 0 10px;
